# ltl-simplification

./: README.md  main.ipynb  pyproject.toml  test_IntSet.py  test_simplify.py
tl_simplification/: interval_simplification.py  ltl.py
tl_simplification/simplification/: interval_functions.py  predicate_checker.py  propagate_interval.py  simplify.py
tl_simplification/utils/: int_set.py  spot.py
